@@ -99,8 +99,7 @@ class Start(FSTargetLiveCommand):
             print "Tuning skipped."
 
         if rc == RC_RUNTIME_ERROR:
-            for nodes, msg in fs.proxy_errors:
-                print "%s: %s" % (nodes, msg)
+            self.display_proxy_errors(fs)
 
         if hasattr(eh, 'post'):
             eh.post(fs)
