@@ -96,8 +96,7 @@ class Tunefs(FSTargetLiveCriticalCommand):
                 print "Tunefs successful."
         else:
             if rc == RC_RUNTIME_ERROR:
-                for nodes, msg in fs.proxy_errors:
-                    print "%s: %s" % (nodes, msg)
+                self.display_proxy_errors(fs)
             if vlevel > 0:
                 print "Tunefs failed"
 
