@@ -83,8 +83,7 @@ class Umount(FSLiveCommand):
                     print "%s was successfully unmounted on %s" % \
                         (fs.fs_name, comps.filter(key=key).servers())
             elif rc == RC_RUNTIME_ERROR:
-                for nodes, msg in fs.proxy_errors:
-                    print "%s: %s" % (nodes, msg)
+                self.display_proxy_errors(fs)
 
         if hasattr(eh, 'post'):
             eh.post(fs)
